--- a/MoneyManager/AnalysisView.xaml
+++ b/MoneyManager/AnalysisView.xaml
@@ -12,6 +12,7 @@
         </Grid.RowDefinitions>
         <GroupBox Header="Date">
             <StackPanel Orientation="Horizontal">
+                <Button HorizontalAlignment="Left" Content="Close" Command="{Binding CloseCommand}"/>
                 <TextBlock FontWeight="Bold" Text="From" Margin="0,0,2,0"/>
                 <DatePickerTextBox Margin="0,0,2,0" HorizontalAlignment="Left" Width="100" Text="{Binding StartDate,StringFormat=d}"/>
                 <TextBlock Margin="0,0,2,0" FontWeight="Bold" Text="To"/>
