--- a/MoneyManager/BudgetView.xaml
+++ b/MoneyManager/BudgetView.xaml
@@ -17,7 +17,11 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>   
         <GroupBox Header="Date">
+            <StackPanel Orientation="Horizontal">
+                <Button HorizontalAlignment="Left" Content="Close" Command="{Binding CloseCommand}"/>
+            
             <ComboBox HorizontalAlignment="Left" Width="150" SelectedItem="{Binding SelectedDate}" ItemsSource="{Binding Dates}" DisplayMemberPath="Display"/>
+            </StackPanel>
         </GroupBox>
         <ScrollViewer VerticalScrollBarVisibility="Visible" Grid.Row="1">
         <GroupBox Header="Budget Items" >
