--- a/MoneyManager/LineItemsWindow.xaml
+++ b/MoneyManager/LineItemsWindow.xaml
@@ -66,7 +66,7 @@
         </ScrollViewer>
 
         <StackPanel Grid.Column="1">
-            <TextBlock FontWeight="Bold" Text="Balance"/>
+            <TextBlock FontWeight="Bold" Text="Total"/>
             <TextBlock FontWeight="Bold" Text="{Binding Total,StringFormat=N2}"/>
         </StackPanel>
     </Grid>
