--- a/MoneyManager/MainWindow.xaml
+++ b/MoneyManager/MainWindow.xaml
@@ -9,12 +9,13 @@
         </Grid.RowDefinitions>
     
     <Menu>
-         
+         <MenuItem Header="Tasks">
         <MenuItem Header="Budget" Click="MenuItem_Click"    />
         <MenuItem Header="Credit Card" Click="MenuItem_Click_2"/>
         <MenuItem Header="Register" Click="MenuItem_Click_1"/>
         <MenuItem Header="Analysis" Click="MenuItem_Click_3"/>
-          
+                <MenuItem Header="Logins" Click="MenuItem_Click_4"/>
+            </MenuItem>
         </Menu>
         <TabControl Grid.Row="1" x:Name="tabs">
             
