--- a/MoneyManager/RegisterView.xaml
+++ b/MoneyManager/RegisterView.xaml
@@ -17,7 +17,7 @@
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -102,11 +102,11 @@
         </ScrollViewer>
 
         <StackPanel Grid.Column="1">
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Vertical" Margin="5">
             <TextBlock FontWeight="Bold" Text="Bank Balance:"/>
-            <TextBlock FontWeight="Bold" Text="{Binding Total,StringFormat=N2}" Margin="10,0,0,0"/>
-                <TextBlock FontWeight="Bold" Text="Real Cash Balance:" Margin="10,0,0,0"/>
-            <TextBlock FontWeight="Bold" Text="{Binding RealTotal,StringFormat=N2}" Margin="10,0,0,0"/>
+            <TextBlock FontWeight="Bold" Text="{Binding Total,StringFormat=N2}" />
+                <TextBlock FontWeight="Bold" Text="Real Cash Balance:"/>
+            <TextBlock FontWeight="Bold" Text="{Binding RealTotal,StringFormat=N2}" />
                  
             </StackPanel>
         </StackPanel>
