--- a/MoneyManager/BudgetView.xaml
+++ b/MoneyManager/BudgetView.xaml
@@ -70,6 +70,7 @@
                                         <TextBox Width="150" Text="{Binding AmountString}"/>
                                 <TextBox Width="150" Text="{Binding Description}"/>
                                     <CheckBox IsChecked="{Binding IsSavings}" Content="Savings?"/>
+                                    <CheckBox Margin="3,0,0,0" IsChecked="{Binding Post}" Content="Register?"/>
                                 </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
@@ -85,6 +86,11 @@
             <TextBlock FontWeight="Bold" Text="{Binding Total,StringFormat=N2}"/>
             <TextBlock FontWeight="Bold" Text="Savings To Transfer:" Margin="10,0,0,0"/>
             <TextBlock FontWeight="Bold" Text="{Binding SavingsTotal,StringFormat=N2}"/>
+                <StackPanel Margin="2" Orientation="Horizontal">
+                    <Button Click="Button_Click">Post Savings</Button>
+                    <Button Click="Button_Click_1" Margin="2,0,0,0">Post Register Items</Button>
+                     
+                </StackPanel>
             </StackPanel>
         </StackPanel>
     </Grid>
