--- a/MoneyManager/RegisterView.xaml
+++ b/MoneyManager/RegisterView.xaml
@@ -106,9 +106,13 @@
             <StackPanel Orientation="Vertical" Margin="5">
             <TextBlock FontWeight="Bold" Text="Bank Balance:"/>
             <TextBlock FontWeight="Bold" Text="{Binding Total,StringFormat=N2}" />
+                <TextBlock FontWeight="Bold" Text="Pending CC:"/>
+                <TextBlock FontWeight="Bold" Text="{Binding CreditCardTotal,StringFormat=N2}" />
+                <TextBlock FontWeight="Bold" Text="Pending Budget:"/>
+                <TextBlock FontWeight="Bold" Text="{Binding OutstandingBudget,StringFormat=N2}" />
                 <TextBlock FontWeight="Bold" Text="Real Cash Balance:"/>
             <TextBlock FontWeight="Bold" Text="{Binding RealTotal,StringFormat=N2}" />
-                 
+                
             </StackPanel>
         </StackPanel>
     </Grid>
