--- a/MoneyManager/MainWindow.xaml
+++ b/MoneyManager/MainWindow.xaml
@@ -14,7 +14,8 @@
         <MenuItem Header="Credit Card" Click="MenuItem_Click_2"/>
         <MenuItem Header="Register" Click="MenuItem_Click_1"/>
         <MenuItem Header="Analysis" Click="MenuItem_Click_3"/>
-                <MenuItem Header="Logins" Click="MenuItem_Click_4"/>
+        <MenuItem Header="Savings" Click="MenuItem_Click_5"/>
+        <MenuItem Header="Logins" Click="MenuItem_Click_4"/>
             </MenuItem>
         </Menu>
         <TabControl Grid.Row="1" x:Name="tabs">
