--- a/MoneyManager/RegisterView.xaml
+++ b/MoneyManager/RegisterView.xaml
@@ -6,7 +6,7 @@
                 xmlns:controls="clr-namespace:MoneyManager.Controls"
              xmlns:local="clr-namespace:MoneyManager"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="800">
     <Grid>
         <Grid.Resources>
             <Style TargetType="TextBox" x:Key="clearedStyle">
@@ -25,7 +25,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <GroupBox Header="Date">
-            <StackPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
             <StackPanel Orientation="Horizontal">
                 <Button HorizontalAlignment="Left" Content="Close" Command="{Binding CloseCommand}"/>
                 <TextBlock FontWeight="Bold" Text="From" Margin="0,0,2,0"/>
@@ -39,7 +44,30 @@
                     <TextBox x:Name="txtSearch" MinWidth="250" Text="{Binding SearchText}"/>
                     <Button HorizontalAlignment="Left" Content="Search" Command="{Binding SearchCommand}"/>
                 </StackPanel>
+                
             </StackPanel>
+
+                <Grid Grid.Column="1" Margin="10,0,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="125"/>
+                        <ColumnDefinition Width="100"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <TextBlock FontWeight="Bold" Text="Bank Balance:"/>
+                    <TextBlock Grid.Column="1" FontWeight="Bold" Text="{Binding Total,StringFormat=N2}" />
+                    <TextBlock Grid.Row="1" FontWeight="Bold" Text="Pending CC:"/>
+                    <TextBlock  Grid.Column="1" Grid.Row="1" FontWeight="Bold" Text="{Binding CreditCardTotal,StringFormat=N2}" />
+                    <TextBlock Grid.Row="2"  FontWeight="Bold" Text="Pending Budget:"/>
+                    <TextBlock  Grid.Column="1" Grid.Row="2"  FontWeight="Bold" Text="{Binding OutstandingBudget,StringFormat=N2}" />
+                    <TextBlock Grid.Row="3"  FontWeight="Bold" Text="Real Cash Balance:"/>
+                    <TextBlock  Grid.Column="1" Grid.Row="3" FontWeight="Bold" Text="{Binding RealTotal,StringFormat=N2}" />
+                </Grid>
+            </Grid>
         </GroupBox>
         <ScrollViewer VerticalScrollBarVisibility="Visible" Grid.Row="1">
             <GroupBox Header="Items" >
@@ -104,14 +132,7 @@
 
         <StackPanel Grid.Column="1">
             <StackPanel Orientation="Vertical" Margin="5">
-            <TextBlock FontWeight="Bold" Text="Bank Balance:"/>
-            <TextBlock FontWeight="Bold" Text="{Binding Total,StringFormat=N2}" />
-                <TextBlock FontWeight="Bold" Text="Pending CC:"/>
-                <TextBlock FontWeight="Bold" Text="{Binding CreditCardTotal,StringFormat=N2}" />
-                <TextBlock FontWeight="Bold" Text="Pending Budget:"/>
-                <TextBlock FontWeight="Bold" Text="{Binding OutstandingBudget,StringFormat=N2}" />
-                <TextBlock FontWeight="Bold" Text="Real Cash Balance:"/>
-            <TextBlock FontWeight="Bold" Text="{Binding RealTotal,StringFormat=N2}" />
+            
                 
             </StackPanel>
         </StackPanel>
