--- a/MoneyManager/AnalysisDetailsWindow.xaml
+++ b/MoneyManager/AnalysisDetailsWindow.xaml
@@ -5,6 +5,7 @@
     <Grid>
         <DataGrid x:Name="grid" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
+                <DataGridTextColumn Header="Date" Binding="{Binding Date,StringFormat=d}"/>
                 <DataGridTextColumn Header="Description" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Amount" Binding="{Binding Amount,StringFormat=N2}"/>
             </DataGrid.Columns>
