--- a/MoneyManager/PasswordWindow.xaml
+++ b/MoneyManager/PasswordWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="MoneyManager.PasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="PasswordWindow" Height="300" Width="300">
+        FocusManager.FocusedElement="{Binding ElementName=txtPass}"
+        Title="PasswordWindow" SizeToContent="WidthAndHeight">
     <Grid>
-        <StackPanel>
+        <StackPanel Height="50">
             <TextBlock Text="Password"/>
-            <PasswordBox x:Name="txtPass" KeyDown="txtPass_KeyDown"/>
+            <PasswordBox Width="250" x:Name="txtPass" KeyDown="txtPass_KeyDown"/>
             <Button HorizontalAlignment="Left"  Content="OK" Click="Button_Click"/>
         </StackPanel>
     </Grid>
