--- a/MoneyManager/MainWindow.xaml
+++ b/MoneyManager/MainWindow.xaml
@@ -11,8 +11,9 @@
     <Menu>
          <MenuItem Header="Tasks">
         <MenuItem Header="Budget" Click="MenuItem_Click"    />
-        <MenuItem Header="Credit Card" Click="MenuItem_Click_2"/>
-        <MenuItem Header="Register" Click="MenuItem_Click_1"/>
+        <MenuItem Header="Credit Card (Chrissi)" Click="MenuItem_Click_2"/>
+                <MenuItem Header="Credit Card (David)"  Click="MenuItem_Click_6"/>
+                <MenuItem Header="Register" Click="MenuItem_Click_1"/>
         <MenuItem Header="Analysis" Click="MenuItem_Click_3"/>
         <MenuItem Header="Savings" Click="MenuItem_Click_5"/>
         <MenuItem Header="Logins" Click="MenuItem_Click_4"/>
